--- a/package.json
+++ b/package.json
@@ -4,63 +4,63 @@
   "sideEffects": false,
   "scripts": {
     "build": "run-s build:*",
-    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
     "build:posts": "npx ts-node scripts/cachePosts.ts",
     "build:remix": "remix build",
     "dev": "run-p dev:*",
-    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "dev:posts": "npx ts-node scripts/cachePosts.ts watch",
     "dev:remix": "remix dev",
     "postinstall": "npm run build:posts"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.7",
-    "@heroicons/react": "^2.0.13",
-    "@markdoc/markdoc": "^0.2.1",
-    "@octokit/plugin-throttling": "^4.3.2",
-    "@octokit/rest": "^19.0.5",
-    "@remix-run/node": "^1.9.0",
-    "@remix-run/react": "^1.9.0",
-    "@remix-run/vercel": "^1.9.0",
-    "@vercel/node": "^2.8.2",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.17",
+    "@markdoc/markdoc": "^0.2.2",
+    "@octokit/plugin-throttling": "^5.0.1",
+    "@octokit/rest": "^19.0.7",
+    "@remix-run/node": "^1.15.0",
+    "@remix-run/react": "^1.15.0",
+    "@remix-run/v1-route-convention": "^0.1.1",
+    "@remix-run/vercel": "^1.15.0",
+    "@vercel/node": "^2.10.2",
+    "@vercel/remix": "^1.15.0",
     "add": "^2.0.6",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "front-matter": "^4.0.2",
     "inflected": "^2.1.0",
-    "isbot": "^3.6.5",
+    "isbot": "^3.6.8",
     "mdx-bundler": "^9.2.1",
-    "p-queue": "^7.3.0",
+    "p-queue": "^7.3.4",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reading-time": "^1.5.0",
     "remix-seo": "^0.1.0",
-    "remix-utils": "^5.1.0",
+    "remix-utils": "^6.1.0",
     "spin-delay": "^1.2.0",
     "tiny-invariant": "^1.3.1",
     "yarn": "^1.22.19",
-    "zod": "^3.20.2"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.9.0",
-    "@remix-run/eslint-config": "^1.9.0",
-    "@remix-run/serve": "^1.9.0",
+    "@remix-run/dev": "^1.15.0",
+    "@remix-run/eslint-config": "^1.15.0",
+    "@remix-run/serve": "^1.15.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.8",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "eslint": "^8.30.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "eslint": "^8.37.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4"
+    "rimraf": "^4.4.1",
+    "tailwindcss": "^3.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.3"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18"
   }
 }
