--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "isbot": "^3.6.8",
     "mdx-bundler": "^9.2.1",
     "p-queue": "^7.3.4",
+    "pretty-cache-header": "^1.0.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
