--- a/package.json
+++ b/package.json
@@ -12,54 +12,55 @@
     "postinstall": "npm run build:posts"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.13",
-    "@heroicons/react": "^2.0.17",
-    "@markdoc/markdoc": "^0.2.2",
-    "@octokit/plugin-throttling": "^5.0.1",
-    "@octokit/rest": "^19.0.7",
-    "@remix-run/node": "^1.15.0",
-    "@remix-run/react": "^1.15.0",
-    "@remix-run/v1-route-convention": "^0.1.1",
-    "@remix-run/vercel": "^1.15.0",
-    "@vercel/node": "^2.10.2",
-    "@vercel/remix": "^1.15.0",
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
+    "@markdoc/markdoc": "^0.3.0",
+    "@octokit/plugin-throttling": "^7.0.0",
+    "@octokit/rest": "^20.0.1",
+    "@remix-run/node": "^1.19.0",
+    "@remix-run/react": "^1.19.0",
+    "@remix-run/v1-route-convention": "^0.1.2",
+    "@remix-run/vercel": "^1.19.0",
+    "@vercel/node": "^2.15.6",
+    "@vercel/remix": "^1.18.1",
     "add": "^2.0.6",
     "classnames": "^2.3.2",
-    "clsx": "^1.2.1",
-    "date-fns": "^2.29.3",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "front-matter": "^4.0.2",
     "inflected": "^2.1.0",
-    "isbot": "^3.6.8",
+    "isbot": "^3.6.13",
     "mdx-bundler": "^9.2.1",
     "p-queue": "^7.3.4",
     "pretty-cache-header": "^1.0.0",
-    "prism-react-renderer": "^1.3.5",
+    "prism-react-renderer": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reading-time": "^1.5.0",
+    "remix-flat-routes": "^0.5.10",
     "remix-seo": "^0.1.0",
-    "remix-utils": "^6.1.0",
+    "remix-utils": "^6.6.0",
     "spin-delay": "^1.2.0",
     "tiny-invariant": "^1.3.1",
     "yarn": "^1.22.19",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.15.0",
-    "@remix-run/eslint-config": "^1.15.0",
-    "@remix-run/serve": "^1.15.0",
+    "@remix-run/dev": "^1.19.0",
+    "@remix-run/eslint-config": "^1.19.0",
+    "@remix-run/serve": "^1.19.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
-    "@types/react-dom": "^18.0.11",
-    "eslint": "^8.37.0",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "eslint": "^8.45.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^4.4.1",
-    "tailwindcss": "^3.3.1",
+    "rimraf": "^5.0.1",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=18"
